package io.github.codedumper.view;

import javax.swing.JPanel;

public class FloorFourPanel extends JPanel{
    
}
