package io.github.codedumper.view;

public class FloorTwoPanel extends JPanel{
    
}
