package io.github.codedumper.view;

import javax.swing.JPanel;

public class GameOverPanel extends JPanel{
    
}
