@startuml ViewClassFigure

class Background {
- BufferedImage background
+ Background()
+ paintComponent(Graphics g)
}

class Button {
- BufferedImage button
- JPanel p1
+ Button()
+ JPanel getButtonPanel()
+ paintComponent(Graphics g)
}

class EndPanel  
class FloorFourPanel  
class FloorOnePanel  
class FloorThreePanel  
class FloorTwoPanel  

class GameFrame {
- GameModel model
- GameController controller
- GameViewPanel view
+ GameFrame()
+ main(String[] argv)
}

class GameViewPanel implements Observer {
- JLabel timerLabel
- JPanel currentPanel
- GameModel model
- GameController controller
+ GameViewPanel(GameModel model, GameController controller)
+ update(Observable o, Object arg)
}

class LobbyPanel  
class GameOverPanel  

class PanelFactory {
+ static JPanel createPanel(Event event)
}

class TimerPanel {
- int remainTime
- JLabel timerLabel
+ TimerPanel()
- String formatTime(int seconds)
- void updateTime()
}

class TitlePanel {
- JPanel p1
+ TitlePanel()
+ JPanel getTitlePanel()
}

   interface DisarmStrategy {
+ boolean tryToDisarm(String s)
}

class Bomb {
- boolean isDefused
- DisarmStrategy disarmStrategy
+ Bomb(CodeDisarmStrategy disarmStrategy)
+ void defuse(String input)
+ boolean isDefused()
}

class BombManager {
- ArrayList<Bomb> bombs
+ BombManager()
+ void addBomb(Bomb bomb)
+ boolean defuseBomb(int index, String inputCode)
+ boolean areAllBombsDefused()
+ List<Bomb> getBombs()
}

class CodeDisarmStrategy {
- String correctCode
+ CodeDisarmStrategy(String correctCode)
+ boolean tryToDisarm(String inputCode)
}

enum Event {
STATE_TITLE,
STATE_LOBBY,
STATE_END,
STATE_1F,
STATE_2F,
STATE_3F,
STATE_4F,
STATE_GAMEOVER,
STATE_GAMECLEAR,
STATE_1F_ROOM,
STATE_2F_ROOM,
STATE_3F_ROOM,
STATE_4F_ROOM,
STATE_HIDDEN_ROOM
}

class GameModel {
- static final int INITIAL_TIME = 3600
- Event currentState
- GameTimer timer
- int remainTime
- BombManager bombManager
- StateMachine stateMachine
+ GameModel()
+ void defuseBomb(int index, String inputCode)
+ synchronized int getTimeRemaining()
+ synchronized void setCurrentState(Event event)
+ synchronized Event getCurrentState()
}

class GameTimer {
- int remainTime
- Timer timer
- TimerListener listener
+ GameTimer(int initialTime, TimerListener listener)
+ void start()
+ void stop()
+ int getRemainingTime()
+ void setRemainingTime(int time)
}

interface TimerListener {
+ void onTimeChange(int newTime)
+ void onTimeOut()
}

class StateMachine {
- Map<Event, List<Event>> transitions
+ StateMachine()
+ Event getNextState(Event currentState, Event event)
}

class GameController {
    - GameModel model
    
    + GameController(GameModel model)
    + void transition(Event event)
}

DisarmStrategy <|-- CodeDisarmStrategy : Inheritance
BombManager --> Bomb : Composition
Bomb --> DisarmStrategy  : Dependency
GameModel --> BombManager  : Composition
GameModel --> GameTimer  :Composition
GameModel --> Event : Association
GameTimer ..> TimerListener :Realization
StateMachine --> Event : Association
GameModel --> StateMachine : Composition
GameController --> GameModel : Dependency
GameFrame --> GameModel : Association
GameFrame --> GameController :Association
GameFrame --> GameViewPanel  : Association
GameViewPanel --> PanelFactory : Dependency
PanelFactory --> EndPanel : Association
PanelFactory --> FloorOnePanel : Association
PanelFactory --> FloorTwoPanel : Association
PanelFactory --> FloorThreePanel : Association
PanelFactory --> FloorFourPanel : Association
PanelFactory --> LobbyPanel : Association
PanelFactory --> GameOverPanel : Association
PanelFactory --> TitlePanel : Association

@enduml
